@@ -15,16 +15,18 @@
  */
 package org.egovframe.rte.fdl.cryptography.impl;
 
-import java.io.UnsupportedEncodingException;
-import java.net.URLDecoder;
-import java.net.URLEncoder;
 import org.apache.commons.codec.binary.Base64;
 import org.egovframe.rte.fdl.cryptography.EgovCryptoService;
-import org.egovframe.rte.fdl.cryptography.EgovPasswordEncoder;
 import org.egovframe.rte.fdl.cryptography.EgovEnvCryptoService;
+import org.egovframe.rte.fdl.cryptography.EgovPasswordEncoder;
 import org.egovframe.rte.fdl.property.EgovPropertyService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.io.UnsupportedEncodingException;
+import java.net.URLDecoder;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 /**
  * EgovEnvCryptoImpl 클래스
@@ -41,7 +43,8 @@ import org.slf4j.LoggerFactory;
  *
  * 수정일		수정자				수정내용
  * ----------------------------------------------
- * 2018.08.09	장동한				최초 생성
+ * 2018.08.09	장동한			최초 생성
+ * 2024.08.22   kiboomhan		URL Safe 암호화 방식 적용
  * </pre>
  */
 public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
@@ -102,8 +105,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	/**
 	 * EgovPasswordEncoder 클래스 setter
 	 * @param passwordEncoder EgovPasswordEncoder클래스
-	 * @return void
-	 */
+     */
 	public void setPasswordEncoder(EgovPasswordEncoder passwordEncoder) {
 		this.passwordEncoder = passwordEncoder;
 	}
@@ -119,8 +121,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	/**
 	 * EgovCryptoService 클래스 setter
 	 * @param cryptoService EgovCryptoService
-	 * @return void
-	 */
+     */
 	public void setCryptoService(EgovCryptoService cryptoService) {
 		this.cryptoService = cryptoService;
 	}
@@ -136,8 +137,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	/**
 	 * EgovPropertyService 클래스 setter
 	 * @param cryptoConfigurer EgovPropertyService클래스
-	 * @return void
-	 */
+     */
 	public void setCryptoConfigurer(EgovPropertyService cryptoConfigurer) {
 		this.propertyService = cryptoConfigurer;
 	}
@@ -149,7 +149,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	 */
 	public String encrypt(String encrypt){
 		try {
-			return URLEncoder.encode(new String(new Base64().encode((byte[])cryptoService.encrypt( encrypt.getBytes("UTF-8"), this.getCyptoAlgorithmKey()))), "UTF-8");
+			return URLEncoder.encode(new String(Base64.encodeBase64(cryptoService.encrypt(encrypt.getBytes(StandardCharsets.UTF_8), this.getCyptoAlgorithmKey()), false, true)), "UTF-8");
 		} catch(IllegalArgumentException | UnsupportedEncodingException e) {
 			LOGGER.error("[IllegalArgumentException] Try/Catch...usingParameters Runing : "+ e.getMessage());
 		}
@@ -163,7 +163,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	 */
 	public String decrypt(String decrypt){
 		try {
-			return new String((byte[])cryptoService.decrypt(new Base64().decode(URLDecoder.decode(decrypt,"UTF-8").getBytes("UTF-8")), this.cyptoAlgorithmKey));
+			return new String(cryptoService.decrypt(Base64.decodeBase64(URLDecoder.decode(decrypt,"UTF-8").getBytes(StandardCharsets.UTF_8)), this.cyptoAlgorithmKey));
 		} catch(IllegalArgumentException | UnsupportedEncodingException e) {
 			LOGGER.error("[IllegalArgumentException] Try/Catch...usingParameters Runing : "+ e.getMessage());
 		}
@@ -177,8 +177,8 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	 */
 	public String encryptNone(String encrypt){
 		try {
-			return new String(new Base64().encode((byte[])cryptoService.encrypt( encrypt.getBytes("UTF-8"), this.getCyptoAlgorithmKey())));
-		} catch(IllegalArgumentException | UnsupportedEncodingException e) {
+			return new String(Base64.encodeBase64(cryptoService.encrypt(encrypt.getBytes(StandardCharsets.UTF_8), this.getCyptoAlgorithmKey()), false, true), StandardCharsets.UTF_8);
+		} catch(IllegalArgumentException e) {
 			LOGGER.error("[IllegalArgumentException] Try/Catch...usingParameters Runing : "+ e.getMessage());
 		}
 		return encrypt;
@@ -191,8 +191,8 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	 */
 	public String decryptNone(String decrypt){
 		try {
-			return new String((byte[])cryptoService.decrypt(new Base64().decode(decrypt.getBytes("UTF-8")), this.cyptoAlgorithmKey));
-		} catch(IllegalArgumentException | UnsupportedEncodingException e) {
+			return new String(cryptoService.decrypt(Base64.decodeBase64(decrypt.getBytes(StandardCharsets.UTF_8)), this.cyptoAlgorithmKey));
+		} catch(IllegalArgumentException e) {
 			LOGGER.error("[IllegalArgumentException] Try/Catch...usingParameters Runing : "+ e.getMessage());
 		}
 		return decrypt;
@@ -201,8 +201,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	/**
 	 * 데이터베이스 접속 항목(계정명)에 대한 setter
 	 * @param username 계정명
-	 * @return void
-	 */
+     */
 	public void setUsername(String username) {
 		this.username = username;
 	}
@@ -211,7 +210,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	 * 데이터베이스 접속 항목(계정명)에 대한 getter
 	 * @return String
 	 */
-	public String getUsername() throws Exception {
+	public String getUsername() {
 		if(this.isCrypto()){
 			try {
 				return this.decrypt(this.username);
@@ -225,8 +224,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	/**
 	 * 데이터베이스 접속 항목(비밀번호)에 대한 setter
 	 * @param password 비밀번호
-	 * @return void
-	 */
+     */
 	public void setPassword(String password) {
 		this.password = password;
 	}
@@ -249,8 +247,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	/**
 	 * 데이터베이스 접속 항목(URL)에 대한 getter
 	 * @param url 접속경로
-	 * @return void
-	 */
+     */
 	public void setUrl(String url) {
 		this.url = url;
 	}
@@ -281,8 +278,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	/**
 	 * Crypto 사용여부에 대한 setter
 	 * @param crypto Crypto사용여부
-	 * @return void
-	 */
+     */
 	public void setCrypto(boolean crypto) {
 		this.crypto = crypto;
 	}
@@ -298,8 +294,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	/**
 	 * Crypto 계정 알고리즘 지정에 대한 getter
 	 * @param cryptoAlgorithm 계정 암호화 알고리즘(MD5, SHA-1, SHA-256)
-	 * @return void
-	 */
+     */
 	public void setCryptoAlgorithm(String cryptoAlgorithm) {
 		this.cryptoAlgorithm = cryptoAlgorithm;
 	}
@@ -315,8 +310,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	/**
 	 * Crypto 알고리즘 키에 대한 setter
 	 * @param cyptoAlgorithmKey 알고리즘키
-	 * @return void
-	 */
+     */
 	public void setCyptoAlgorithmKey(String cyptoAlgorithmKey) {
 		this.cyptoAlgorithmKey = cyptoAlgorithmKey;
 	}
@@ -332,8 +326,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	/**
 	 * Crypto 알고리즘 키 Hash에 대한 setter
 	 * @param cyptoAlgorithmKeyHash 알고리즘키Hash코드
-	 * @return void
-	 */
+     */
 	public void setCyptoAlgorithmKeyHash(String cyptoAlgorithmKeyHash) {
 		this.cyptoAlgorithmKeyHash = cyptoAlgorithmKeyHash;
 	}
@@ -350,8 +343,7 @@ public class EgovEnvCryptoServiceImpl implements EgovEnvCryptoService {
 	 * Crypto 블럭 사이즈에 대한 setter
 	 * 
 	 * @param cryptoBlockSize 블럭사이즈
-	 * @return void
-	 */
+     */
 	public void setCryptoBlockSize(int cryptoBlockSize) {
 		this.cryptoBlockSize = cryptoBlockSize;
 	}
