@@ -1,18 +1,15 @@
 package org.egovframe.rte.fdl.property;
 
-import static org.junit.Assert.assertEquals;
-
-import javax.annotation.Resource;
-
 import org.egovframe.rte.fdl.cmmn.exception.FdlException;
 import org.junit.Test;
 import org.junit.runner.RunWith;
 import org.springframework.test.context.ContextConfiguration;
-import org.springframework.test.context.junit4.AbstractJUnit4SpringContextTests;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 
-import java.io.IOError;
+import javax.annotation.Resource;
 import java.io.IOException;
+
+import static org.junit.Assert.assertEquals;
 
 /**
  * PropertyServiceRefreshTest
@@ -31,12 +28,14 @@ import java.io.IOException;
  * </pre>
  */
 @RunWith(SpringJUnit4ClassRunner.class)
-@ContextConfiguration(locations = {"classpath*:/spring/context-common.xml",
-    "classpath*:/spring/context-properties.xml" })
-public class PropertyServiceRefreshTest extends AbstractJUnit4SpringContextTests {
+@ContextConfiguration(locations = {
+        "classpath*:/spring/context-common.xml",
+        "classpath*:/spring/context-properties.xml"
+})
+public class PropertyServiceRefreshTest {
 
     @Resource(name = "propertyService")
-    protected EgovPropertyService propertyService = null;
+    protected EgovPropertyService propertyService;
 
     /**
      * 시스템 재가동없이 Property를 리로드
@@ -45,11 +44,17 @@ public class PropertyServiceRefreshTest extends AbstractJUnit4SpringContextTests
      */
     @Test
     public void testRefreshPropertiesFiles() throws IOException, FdlException {
-        assertEquals("first token", propertyService.getString("tokens_on_multiple_lines"));
-        assertEquals(new Double(1234), new Double(propertyService.getDouble("number.double")));
+
+        for (String value : propertyService.getStringArray("tokens_on_multiple_lines")) {
+            System.out.println("##### tokens_on_multiple_lines >>> " + value);
+        }
+
+        assertEquals(4, propertyService.getStringArray("tokens_on_multiple_lines").length);
+        assertEquals("first token refresh", propertyService.getString("tokens_on_multiple_lines"));
+        assertEquals(Double.valueOf(1234), Double.valueOf(propertyService.getDouble("number.double")));
         propertyService.refreshPropertyFiles();
-        assertEquals("first token", propertyService.getString("tokens_on_multiple_lines"));
-        assertEquals(new Double(1234), new Double(propertyService.getDouble("number.double")));
+        assertEquals("first token refresh", propertyService.getString("tokens_on_multiple_lines"));
+        assertEquals(Double.valueOf(1234), Double.valueOf(propertyService.getDouble("number.double")));
     }
 
 }
