@@ -1,28 +1,9 @@
 package org.egovframe.rte.psl.dataaccess.ibatis;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
-
-import java.sql.ResultSet;
-import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Calendar;
-import java.util.Date;
-import java.util.GregorianCalendar;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.TimeZone;
-
+import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.egovframe.rte.psl.dataaccess.TestBase;
 import org.egovframe.rte.psl.dataaccess.dao.EmpDAO;
 import org.egovframe.rte.psl.dataaccess.vo.EmpVO;
-
-import javax.annotation.Resource;
-
-import org.apache.commons.lang3.builder.ToStringBuilder;
 import org.junit.Before;
 import org.junit.Test;
 import org.junit.runner.RunWith;
@@ -34,6 +15,13 @@ import org.springframework.test.annotation.Rollback;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
 import org.springframework.transaction.annotation.Transactional;
+
+import javax.annotation.Resource;
+import java.sql.ResultSet;
+import java.text.SimpleDateFormat;
+import java.util.*;
+
+import static org.junit.Assert.*;
 
 /**
  *  == 개정이력(Modification Information) ==
@@ -167,7 +155,7 @@ public class CallableStatementTest extends TestBase {
 			Map<String, Object> map = new HashMap<String, Object>();
 			// 현재 시간에서 inCondition 에 해당하는 일자(days)를 뺀
 			// 시간을 되돌려 줄 것임.
-			map.put("inCondition", new Integer(1));
+			map.put("inCondition", Integer.valueOf(1));
 			// 결과는 해당 map 의 outResult 라는 변수로 담겨 올 것임.
 
 			// procedure call
@@ -185,7 +173,7 @@ public class CallableStatementTest extends TestBase {
 			Map<String, Object> map = new HashMap<String, Object>();
 			// 현재 시간에서 inCondition 에 해당하는 일자(days)를 뺀
 			// 시간을 되돌려 줄 것임.
-			map.put("inCondition", new Integer(1));
+			map.put("inCondition", Integer.valueOf(1));
 			// 결과는 해당 map 의 outResult 라는 변수로 담겨 올 것임.
 
 			// procedure call
